<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <include
        android:id="@+id/no_network_toolbar"
        layout="@layout/no_network_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/forty_dp"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/no_connection" />

        <com.clairvoyant.naijamenu.fonts.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:text="@string/no_internet_title"
            android:textColor="@color/black"
            android:textSize="@dimen/twenty_sp" />

        <com.clairvoyant.naijamenu.fonts.RobotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:text="@string/no_internet_message"
            android:textColor="@color/medium_gray"
            android:textSize="@dimen/sixteen_sp" />

        <com.clairvoyant.naijamenu.fonts.RobotoRegularButton
            android:id="@+id/try_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/no_internet_background_selector"
            android:gravity="center"
            android:text="@string/try_again"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>